# logistic_regression_from_scratch

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pylint.yml
api/: app.py
src/: data_preprocessing.py  main.py  mlflow_lite.py  model.py  monitoring.py  predict.py  train.py
