[project]
name = "logistic-regression-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "flask>=3.1.2",
    "kaggle>=1.8.3",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pylint>=4.0.4",
    "requests>=2.32.5",
]

[tool.pylint]
disable = [
    "C0103",
    "R0913"
    "R0914",
    "R0918"
]
